# deberta-multitask-short-answer

./: README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: metadata.json  validation.jsonl
scripts/: check_jsonl_dataset.py  prepare_asap_sas.py  smoke_test.py
src/deberta_multitask/: __init__.py  data.py  metrics.py  model.py  train.py
