[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deberta-multitask-short-answer"
version = "0.1.0"
description = "DeBERTa-v3 multi-task short answer scoring with classification and regression heads."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

